--- a/mi-aplicacion/index.html
+++ b/mi-aplicacion/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <!-- <link rel="icon" type="image/svg+xml" href="/vite.svg" /> -->
     <link rel="icon" type="image/png" href="/images/ISOTIPO.png" />
+    <link rel="stylesheet" href="/public/fonts/fonts.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Agencia inmobiliaria especializada en Artaza y Getxo. Más de 10 años ayudando a encontrar viviendas ideales.">
     <meta name="keywords" content="Artaza, Getxo, inmobiliaria, compra, venta, pisos, casas">
