--- a/mi-aplicacion/index.html
+++ b/mi-aplicacion/index.html
@@ -10,6 +10,8 @@
     <meta name="keywords" content="Artaza, Getxo, inmobiliaria, compra, venta, pisos, casas">
     <meta name="author" content="Artaza Inmobiliaria">
     <title>Artaza Inmobiliaria</title>
+    <!-- <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY" async defer></script> -->
+
   </head>
   <body>
     <div id="root"></div>
