--- a/mi-aplicacion/index.html
+++ b/mi-aplicacion/index.html
@@ -6,7 +6,7 @@
     <link rel="icon" type="image/png" href="/images/ISOTIPO.png" />
     <link rel="stylesheet" href="/public/fonts/fonts.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Agencia inmobiliaria especializada en Artaza y Getxo. Más de 10 años ayudando a encontrar viviendas ideales.">
+    <meta name="description" content="Artaza Inmobiliaria es una agencia especializada en el mercado local inmobiliario. Con más de 10 años de experiencia y sede en el norte de España.">
     <meta name="keywords" content="Artaza, Getxo, inmobiliaria, compra, venta, pisos, casas">
     <meta name="author" content="Artaza Inmobiliaria">
     <title>Artaza Inmobiliaria</title>
